# telegram-sticker-set-maker-rs

./: .gitignore  .telegram-auth-example.toml  .travis.yml  Cargo.toml  Dockerfile-lint-test  README.md  appveyor.yml  docker-compose.lint-test.yml
src/: add.rs  main.rs  structs.rs
