[package]
name = "telegram-sticker-set-maker"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
description = "Telegram sticker set making executable in Rust"
repository = "https://github.com/guangie88/telegram-sticker-set-maker-rs"
readme = "README.md"
categories = ["command-line-utilities"]
license = "MIT"

[badges]
travis-ci = { repository = "guangie88/telegram-sticker-set-maker-rs" }
codecov = { repository = "guangie88/telegram-sticker-set-maker-rs" }

[dependencies]
emojicons = "1.0.1"
failure = "0.1.1"
glob = "0.2.11"
regex = "1.0.2"
reqwest = "0.8.6"
serde = "1.0.70"
serde_derive = "1.0.70"
structopt = "0.2.10"
structopt-derive = "0.2.10"
telepathy = "0.0.1"
toml = "0.4.6"
url = "1.7.1"
vec1 = { version = "1.1.0", features = ["serde"] }
vlog = "0.1.4"

[[bin]]
name = "tssm"
path = "src/main.rs"
